--- a/src/partials/torteneteknav.html
+++ b/src/partials/torteneteknav.html
@@ -6,28 +6,28 @@
             {{#unlesspage 'luca' }}
             <li>
                 <div class="tcard accent">
-                    <h3 class="tcard__title"><a href="{{roots}}/luca.html">Luca története</a></h3>
+                    <h3 class="tcard__title"><a href="{{roots}}/luca/">Luca története</a></h3>
                 </div>
             </li>
             {{/unlesspage}}
             {{#unlesspage 'tunde' }}
             <li>
                 <div class="tcard secondary">
-                    <h3 class="tcard__title"><a href="{{roots}}/tunde.html">Tünde története</a></h3>
+                    <h3 class="tcard__title"><a href="{{roots}}/tunde/">Tünde története</a></h3>
                 </div>
             </li>
             {{/unlesspage}}
             {{#unlesspage 'etelka' }}
             <li>
                 <div class="tcard opaque">
-                    <h3 class="tcard__title"><a href="{{roots}}/etelka.html">Etelka története</a></h3>
+                    <h3 class="tcard__title"><a href="{{roots}}/etelka/">Etelka története</a></h3>
                 </div>
             </li>
             {{/unlesspage}}
             {{#unlesspage 'andrea' }}
             <li>
                 <div class="tcard">
-                    <h3 class="tcard__title"><a href="{{roots}}/andrea.html">Andrea története</a></h3>
+                    <h3 class="tcard__title"><a href="{{roots}}/andrea/">Andrea története</a></h3>
                 </div>
             </li>
             {{/unlesspage}}
