--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -8,10 +8,10 @@
             <li>
                 <a href="{{root}}/#stories" class="dropdown">Személyes történetek</a>
                 <ul>
-                    <li><a href="{{root}}/luca.html">Luca története</a></li>
-                    <li><a href="{{root}}/tunde.html">Tünde története</a></li>
-                    <li><a href="{{root}}/etelka.html">Etelka története</a></li>
-                    <li><a href="{{root}}/andrea.html">Andrea története</a></li>
+                    <li><a href="{{root}}/luca/">Luca története</a></li>
+                    <li><a href="{{root}}/tunde/">Tünde története</a></li>
+                    <li><a href="{{root}}/etelka/">Etelka története</a></li>
+                    <li><a href="{{root}}/andrea/">Andrea története</a></li>
                 </ul>
             </li>
             <li><a href="{{root}}/#aboutus">Mi az a FECSKE?</a></li>            
