--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -4,17 +4,17 @@
     </div>
     <nav class="siteheader__nav">
         <ul class="mainmenu" data-magellan>
-            <li><a href="{{root}}/">Otthon várunk</a></li>
+            <li><a href="{{root}}">Otthon várunk</a></li>
             <li>
-                <a href="{{root}}/#stories" class="dropdown">Személyes történetek</a>
+                <a href="{{root}}#stories" class="dropdown">Személyes történetek</a>
                 <ul>
-                    <li><a href="{{root}}/luca/">Luca története</a></li>
-                    <li><a href="{{root}}/tunde/">Tünde története</a></li>
-                    <li><a href="{{root}}/etelka/">Etelka története</a></li>
-                    <li><a href="{{root}}/andrea/">Andrea története</a></li>
+                    <li><a href="{{root}}luca/">Luca története</a></li>
+                    <li><a href="{{root}}tunde/">Tünde története</a></li>
+                    <li><a href="{{root}}etelka/">Etelka története</a></li>
+                    <li><a href="{{root}}andrea/">Andrea története</a></li>
                 </ul>
             </li>
-            <li><a href="{{root}}/#aboutus">Mi az a FECSKE?</a></li>            
+            <li><a href="{{root}}#aboutus">Mi az a FECSKE?</a></li>            
         </ul>
     </nav>
 </header>
