--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -12,6 +12,6 @@
         <link rel="icon" href="{{root}}assets/img/favicon/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="{{root}}assets/img/favicon/apple-touch-icon.png">
         <meta name="description" content="{{desc}}">
-        <meta property="og:image" content="{{ogimage}}"/>
-        <meta name="robots" content="noindex, nofollow">
+        <meta property="og:image" content="{{root}}{{ogimage}}"/>
+        <meta name="robots" content="index, follow">
     </head>
