--- a/src/partials/lettermodals.html
+++ b/src/partials/lettermodals.html
@@ -1,7 +1,7 @@
 <div class="lettermodal" id="letter-olivia-modal" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
     <div class="lettermodal__inner">
         <div class="narrowwrap accentcopy">
-            <h3 class="narrowwrap__floatingtitle">Olívia beszámolója az első napokról</h3>
+            <h3 class="narrowwrap__floatingtitle">Olívia beszámolója</h3>
             <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet. Féltem a saját postaládánktól, minden alkalommal, amikor kinyitottam. Vajon benne lesz ma? Vagy marad még egy kis időnk együtt? Nem váratott magára túl sokat... A gyerekeket elvittem az oviba, és mivel volt egy fontos időpontom, előtte hazaugrottam. Értesítést dobtak be, rohantam a postára. Feltéptem a levelet, ahogy kiléptem az ajtón. Az első, amin megakadt a szemem, hogy van még 4 teljes hét, a másik pedig az Intézmény neve. Sokkot kaptam, az egyetlen hely, amitől rettegtem. Remegve felszálltam a (rossz) buszra és elindultam valahova...</p>
             <p>A következő hetekben megpróbáltunk némi információhoz jutni, de falakba ütköztünk. Első körben természetesen felhívtam az adott Intézményt. Úgy kezeltek, mintha egy atombombát dobtam volna le. Szörnyen megalázó volt. Igyekeztem a megütött stílus ellenére kulturált maradni, tájékozódni, de egy morzsányi információnál többet nem kaptam.
             Gyakorlatilag vakon vittem a férjemet egy olyan helyre, ahol várhatóan 38 hónapot fog tölteni.</p>
