--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -24,6 +24,11 @@
             flex-direction: row-reverse;
         }
     }
+
+    &.noborder {
+        border-top: none;
+        border-bottom: none;
+    }
 }
 
 
@@ -174,18 +179,12 @@
         // max-width: none;
         // object-fit: cover;
         @include breakpoint($bp-tablet) {
-            position: absolute;
-            left:0;
-            top:50%;
-            transform: translateY(-50%);
-
-            max-height: 100%;
-            width:auto;
+            max-height: none;
+            width:100%;
+            height:100%;
             max-width: none;
-            .reverse & {
-                left:auto;
-                right:0;
-            }
+            object-fit: cover;
+            
         }
 
     }
@@ -263,6 +262,19 @@
             left:43%;
         }
     }
+}
+
+.mpt__fig__play {
+    @extend .mpt__bg__play;
+    @include breakpoint($bp-tablet) {
+        left:50%;
+    }
+    .reverse & {
+        @include breakpoint($bp-tablet) {
+            left:50%;
+        }
+    }
+
 }
 
 .mpt__kicker {
