--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -14,4 +14,13 @@
         <meta name="description" content="{{desc}}">
         <meta property="og:image" content="https://fogvatartas.hu/otthon-varunk/{{ogimage}}"/>
         <meta name="robots" content="index, follow">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-27211232-4"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-27211232-4');
+        </script>
     </head>
