--- a/src/partials/lettermodals.html
+++ b/src/partials/lettermodals.html
@@ -31,3 +31,24 @@
         <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
     </button>
 </div>
+<div class="lettermodal" id="letter-alexandra-modal" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
+    <div class="lettermodal__inner">
+        <div class="narrowwrap accentcopy">
+            <h3 class="narrowwrap__floatingtitle">Alexandra története</h3>
+            <p>2020.szeptember 1-én bementem a gyámügyhöz, hogy ha tudnak biztosítsanak nekem és a kisfiamnak helyet. Az albérlet amiben eddig éltünk már nem aktuális, mivel a tulaj nem engedi, hogy ott maradjunk… Félt, hogy egyedül nem fogom tudni fizetni 37.700 Ft a jövedelmem az albérlet meg 30.000 volt havonta.</p>
+            <p>A családsegítőben azt tanácsolták menjek be a bíróságra, mert minden héten egyszer van meghallgatás nap. Próbáltam egy kis időt kérni a bevonulásra. Sajnos elutasították és azon a napon kaptam rá választ, mikor bevonult a férjem, azaz 2020.szept.04-én már ő bent volt.</p>
+            <p>A férjem úgy vonult be, hogy közölte az anyjával, ha nem engedi, hogy oda költözzek a gyerekkel, akkor öngyilkos lesz bent. Ìgy az anyja megengedte, hogy oda menjek. Náluk éltem szeptember végétől, de a helyzet elviselhetetlen volt, nem jöttem ki anyósommal.</p>
+            <p>Majd édesapámék belementek, hogy vesznek fel nekem hitelt és vesznek egy házat, aminek a törlesztője 46.200 Ft. Belementem a hülyeségbe. Azt mondták vigyáznak a gyerekemre, hogy tudjak járni plazmát adni, mert ameddig anyósomnál laktam heti kétszer jártam, hogy tudjam támogatni a férjem bent.</p>
+            <p>Beköltöztünk az új házba, a mostohaanyám és az édesapám előadta, hogy majd itt beveszik a kisfiam a bölcsibe és munkám is biztosan lesz. A kisfiam tényleg bevették a bölcsibe de 2 napot ment aztán 2 hetet itthon volt betegen. Ez ment hónapokon keresztül. Ìgy eltanácsolták, mondván ne foglaljam a helyet olyan gyerekek elől akinek a szülei rendesen hordanák a gyereküket.</p>
+            <p>Munkám azóta sincs. Édesanyám 2 hetente bevásáról nekünk és ő segített fával is mert kályhával tudok csak fűteni. Minden nap szélbe, fagyba, esőbe kint fűrészeltem a fát a gyerekemmel együtt, mert senki nem jött segíteni! Mindent én intézek a férjemnek, és mindent megpróbáltunk már, hátha hamarabb kijöhet, de ez csak egy álom volt. 1.5 éve bent van, minden nap egy küzdelem számomra és még van 1 év hátra.</p>
+            <p>Próbáltam sim kártyák árusítását, amiből volt egy kis pénzem, (bocsánat) de buta analfabéta romákkal kellett beszélnem napi szinten, akik minden egyes nap megfenyegettek ha nem érkezik meg a sim kártya akkor kinyírnak. Persze minden alkalommal megkapták, de lelkileg nem bírtam tovább, és az igazat megvallva elég simlis számomra is a cég, akiknek dolgoztam.</p>
+            <p>A férjem 2 munkahelyen dolgozott amìg kint volt, hogy ne kelljen nélkülöznünk a gyerekkel. Biztonsági őrként dolgozott 24/48-ba, és mikor letette ott a munkát ment kubikolni, mert burkoló végzettsége is van. 24 órás műszak után haza sem jött, ment a másik munkába, este haza reggel vissza, aztán vissza 24-be ismét! De sosem nélkülöztünk!!!! Este haza jött, amíg elkészítettem a vacsorát játszott a fiával, aztán elkészítette neki a fürdővizét minden este… tisztába tette, altatta… Tökéletes apa volt és férj!!!! Rettegek attól, hogy a börtön rossz hatással lesz rá!!!! És eszméletlen kilátástalan lett az életem a gyerekkel!</p>
+
+
+            <p><em>Alexandra</em></p>
+        </div>
+    </div>
+    <button class="lettermodal__close" data-close aria-label="Felugró bezárása" type="button">
+        <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
+    </button>
+</div>
