--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -91,7 +91,7 @@
     grid-auto-rows: 1fr;
 
 
-    > li {
+    > li, > div {
         // background-color: $cl-primary;
         // background-color: $cl-gray-xlight;
         // padding:1rem;
