--- a/src/partials/lettermodals.html
+++ b/src/partials/lettermodals.html
@@ -52,3 +52,21 @@
         <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
     </button>
 </div>
+<div class="lettermodal" id="letter-zsuzsanna-modal" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
+    <div class="lettermodal__inner">
+        <div class="narrowwrap accentcopy">
+            <h3 class="narrowwrap__floatingtitle">Zsuzsanna története</h3>
+            <p>Jelenleg én is egy egyedülálló anyuka vagyok, mivel a férjem is bent van a Tiszalöki Országos Büntetés-végrehajtási Intézetben. Egy 11 éves kislányt nevelek egyedül. Mikor a férjem bevonult, én is egyedül maradtam egy albérletben egy halom tartozással, ugye kiszámlázták a perköltséget, ami kicsivel több mint félmillió forint volt. Hiába kértük meg, hogy engedjék el legalább a kiskorú gyermekre való tekintettel, sajnos ez nem történt meg így minden hónapban fizetem 30 ezrével a csekket.</p>
+            <p>Nekem sincs sajnos segítségem, mert a szüleim anyagi helyzete nem engedi ezt meg, hogy engem is támogassanak. A férjemnek vannak gyermekei, akik már felnőttek, de mikor bekerült a börtönbe, mindenki hátat fordított neki. Iszonyatosan nehéz volt a kezdeti időszak, már most valamivel könnyebb, bár őt is finanszírozni, hogy legalább hívni tudjon minket nem egyszerű, de sajnos nem tehetem meg azt, hogy nem küldök neki pénzt, mert a 11 éves kislánya azt már nem tudná elviselni, ha nem beszélhetne vele.</p>
+            <p>A benti nehézségekkel megküzdve, hogy nap mint nap megalázzák, még értünk is aggódnia kell. Sajnos ez a láthatás is annyira le van még mindig korlátozva, hogy a gyermeknek már nem tudok mit mondani, hogy mikor mehet az apukájához vagy ha mehet is, mikor ölelheti meg, ami nagyon fontos lenne mindhármunk számára. Másfél éve nem láttuk, csak skypon, ami nyilván jobb, mint a semmi, de ettől függetlenül még nagyon nehéz így is. Egy szülőnek, főleg így, hogy ha ilyen okból kifolyólag is, nagyon sokat kell ilyenkor nélkülöznie, azért hogy a gyermekének meg tudjon adni mindent, és ugyanúgy a párjának is. </p>
+            <p>A téli időszak nagyon nehéz, ilyenkor hazajönni a 12 órás műszakból, begyújtani stb. Nyáron meg ott van a kerti munka, mikor füvet kell vágni, na és persze a ház körüli munkák, és persze a benti, és ez megy a végkimerülésig, de tudod, hogy nem adhatod fel. Sajnos az Intézmények hozzáállása sem könnyíti meg a helyzetet, hogy minden áron igyekeznek távol tartani a szeretteinktől.</p>
+            <p><em>Minden tiszteletem az Önöké, hogy igyekeznek segíteni a bent lévőket és azok hozzátartozóit is.</em></p>
+
+
+            <p><em>Zsuzsanna</em></p>
+        </div>
+    </div>
+    <button class="lettermodal__close" data-close aria-label="Felugró bezárása" type="button">
+        <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
+    </button>
+</div>
